syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
option java_package = "com.vicras.proto_gen.note";
option java_multiple_files = true;

message Note {
  int64 id = 1;
  int64 userId = 2;
  string question = 3;
  repeated string answers = 4;
}

message Notes {
  repeated Note notes = 1;
}

service NoteController {
  rpc newRecord (Note) returns (google.protobuf.Empty) {}
  rpc getById (google.protobuf.Int64Value) returns (Note) {}
  rpc getAllByUserId (google.protobuf.Int64Value) returns (Notes) {}
  rpc deleteById (google.protobuf.Int64Value) returns (google.protobuf.Empty) {}
}